project orgs alura kotlin course pt-2

--- a/app/src/main/res/layout/activity_products_list.xml
+++ b/app/src/main/res/layout/activity_products_list.xml
@@ -6,7 +6,7 @@
     android:id="@+id/productListRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="8dp">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -18,14 +18,15 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/product_item" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:clickable="true"
         android:focusable="true"
-        android:src="@drawable/ic_action_add"
+        app:icon="@drawable/ic_action_add"
+        android:text="@string/new_product"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
